syntax = "proto3";
package ncs.game.cookie.v1;
option go_package = "backend/app/game/cookie/api/grpc/v1";

import "google/api/annotations.proto";

message GetCookieReq {
    int64 uid = 1;
    string key = 2;
}

message GetCookieResp {
    string value = 1;
    bool exist = 2;
    int64 last_updated = 3;
}

message GetAllCookieReq {
    int64 uid = 1;
}

message GetAllCookieResp {
    map<string, string> cookie = 1;
}

message SetCookieReq {
    int64 uid = 1;
    string key = 2;
    string value = 3;
    bool notify = 4;
    int64 timestamp = 5;
}

message SetCookieResp {
}

service Cookie {
    rpc GetCookie (GetCookieReq) returns (GetCookieResp) {
        option (google.api.http) = {
            get: "/game/cookie/get/{uid}/{key}"
        };
    }
    rpc GetAllCookie (GetAllCookieReq) returns (GetAllCookieResp) {
        option (google.api.http) = {
            get: "/game/cookie/all/{uid}"
        };
    }
    rpc SetCookie (SetCookieReq) returns (SetCookieResp) {
        option (google.api.http) = {
            post: "/game/cookie/set"
            body: "*"
        };
    }
}

